kustomize/ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  annotations:
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
  name: id
spec:
  rules:
  - host: id
    http:
      paths:
      - backend:
          serviceName: id
          servicePort: 80
  tls:
  - hosts:
    - id
    secretName: tls-id
